<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large"
    tools:context=".ui.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_title"
        style="@style/Headline.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_page_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/welcome_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/welcome_information"
        style="@style/Body.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/welcome_page_information"
        android:textColor="@color/textLight"
        app:layout_constraintBottom_toTopOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxl"
        android:text="@string/welcome_google_button"
        app:layout_constraintBottom_toTopOf="@id/login_email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_information" />

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/neutral800"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/white"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/welcome_email_and_password_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_button" />


</androidx.constraintlayout.widget.ConstraintLayout>