<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large"
    tools:context=".ui.CreateAccountActivity">

    <ImageView
        android:id="@+id/create_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_left"
        android:backgroundTint="@color/neutral800"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account_title"
        style="@style/Headline.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/create_account_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/create_account_subtitle"
        style="@style/Body.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/create_account_subtitle"
        android:textColor="@color/textLight"
        app:layout_constraintBottom_toTopOf="@id/text_input_create_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_create_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extraLarge"
        app:layout_constraintBottom_toTopOf="@id/text_input_create_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_subtitle"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/edit_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_label_name"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_create_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@id/text_input_create_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_create_name"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_label_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_create_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@id/create_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_create_email"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/edit_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_label_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/create_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/mega"
        android:layout_marginTop="@dimen/xxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_create_password" />

    <Button
        android:id="@+id/create_account_user_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_container" />

    <ProgressBar
        android:id="@+id/create_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_container" />

</androidx.constraintlayout.widget.ConstraintLayout>